...
    android:id="@+id/address_list_coordiator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/address_index_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/address_list_empty"
        android:layout_width="match_parent"
...
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/fab_margin"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create_addresss_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_input_add" />
...
